# hats-cloudtests

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  delucchi_connections.md  index.json  info.json  pyproject.toml  regressions.json  regressions.xml  requirements.txt  status_format.py
.github/ISSUE_TEMPLATE/: 1-bug_report.md
.github/workflows/: asv-pr.yml  pre-commit-ci.yml  smoke-test.yml  testing-and-coverage.yml
_results/: benchmarks.json
_results/gh-runner/: 0154d5dd-virtualenv-py3.11-Cython-build-packaging.json  0154d5dd-virtualenv-py3.12-Cython-build-packaging.json  024fdf1a-virtualenv-py3.12-Cython-build-packaging.json  05a6661b-virtualenv-py3.12-Cython-build-packaging.json  0d4df50d-virtualenv-py3.11-Cython-build-packaging.json  0d4df50d-virtualenv-py3.12-Cython-build-packaging.json  10c02d0b-virtualenv-py3.12-Cython-build-packaging.json  12fd5c74-virtualenv-py3.11-Cython-build-packaging.json  12fd5c74-virtualenv-py3.12-Cython-build-packaging.json  153516d3-virtualenv-py3.12-Cython-build-packaging.json  153c401e-virtualenv-py3.11-Cython-build-packaging.json  153c401e-virtualenv-py3.12-Cython-build-packaging.json  16e52233-virtualenv-py3.11-Cython-build-packaging.json  16e52233-virtualenv-py3.12-Cython-build-packaging.json  19c20891-virtualenv-py3.11-Cython-build-packaging.json  19c20891-virtualenv-py3.12-Cython-build-packaging.json  1ac037ab-virtualenv-py3.12-Cython-build-packaging.json  1e61218b-virtualenv-py3.12-Cython-build-packaging.json  1fd4bf9e-virtualenv-py3.11-Cython-build-packaging.json  1fd4bf9e-virtualenv-py3.12-Cython-build-packaging.json  21e0ea91-virtualenv-py3.10-Cython-build-packaging.json  21e0ea91-virtualenv-py3.11-Cython-build-packaging.json  21e0ea91-virtualenv-py3.12-Cython-build-packaging.json  222d1eda-virtualenv-py3.11-Cython-build-packaging.json  222d1eda-virtualenv-py3.12-Cython-build-packaging.json  2368bc15-virtualenv-py3.11-Cython-build-packaging.json  2368bc15-virtualenv-py3.12-Cython-build-packaging.json  29f6cdde-virtualenv-py3.11-Cython-build-packaging.json  29f6cdde-virtualenv-py3.12-Cython-build-packaging.json  2a35ae8f-virtualenv-py3.11-Cython-build-packaging.json  2a35ae8f-virtualenv-py3.12-Cython-build-packaging.json  2bd031bc-virtualenv-py3.11-Cython-build-packaging.json  2bd031bc-virtualenv-py3.12-Cython-build-packaging.json  2e498d69-virtualenv-py3.12-Cython-build-packaging.json  2efd4426-virtualenv-py3.12-Cython-build-packaging.json  2f07189d-virtualenv-py3.11-Cython-build-packaging.json  2f07189d-virtualenv-py3.12-Cython-build-packaging.json  35f50e6b-virtualenv-py3.11-Cython-build-packaging.json  35f50e6b-virtualenv-py3.12-Cython-build-packaging.json  366b441e-virtualenv-py3.11-Cython-build-packaging.json  (+194 more)
benchmarks/: asv.conf.json  benchmarks.py
connectivity_tests/: test_from_epyc.py  test_from_huggingface.py  test_from_vizcat.py
graphs/summary/: benchmarks.BenchmarksCDSHTTP.time_gaia.json  benchmarks.BenchmarksHTTP.peakmem_gaia.json  benchmarks.BenchmarksHTTP.time_gaia.json  benchmarks.BenchmarksS3.peakmem_euclid.json  benchmarks.BenchmarksS3.time_euclid.json  benchmarks.mem_list.json  benchmarks.time_computation.json
src/: .pylintrc
src/hats_cloudtests/: __init__.py
tests/: .pylintrc  conftest.py
tests/cloud/data/small_sky/: hats.properties  properties
tests/cloud/data/small_sky_npix_as_dir/: hats.properties  properties
tests/cloud/data/small_sky_object_index/: properties
tests/cloud/data/small_sky_order1/: collection.properties  properties
tests/cloud/data/small_sky_order1_margin/: properties
tests/cloud/data/small_sky_xmatch/: hats.properties  properties  skymap.fits
tests/data/: generate_cloud_data.ipynb  generate_local_data.ipynb
tests/data/collection_absolute_paths/coll_abfs/: collection.properties
tests/data/collection_absolute_paths/coll_http/: collection.properties
tests/data/collection_absolute_paths/coll_local_gcs/: collection.properties
tests/data/collection_absolute_paths/coll_local_s3/: collection.properties
tests/data/indexed_files_abfs/: parquet_list_single.txt
tests/data/indexed_files_http/: csv_list_single.txt  parquet_list_single.txt
tests/data/indexed_files_local_gcs/: csv_list_single.txt  parquet_list_single.txt
tests/data/indexed_files_local_s3/: parquet_list_single.txt
tests/data/small_sky/: hats.properties  properties
tests/data/small_sky_order1/: hats.properties  properties
tests/data/small_sky_order1/dataset/: data_thumbnail.parquet
tests/hats/catalog/: test_catalog_cloud.py  test_index_catalog.py  test_margin_catalog.py
tests/hats/io/: test_skymap.py  test_write_metadata_cloud.py
tests/hats/io/file_io/: test_file_io_cloud.py  (+1 more)
tests/hats_cloudtests/: test_packaging.py
tests/hats_import/: test_create_margin.py  test_import_file_io_cloud.py  test_input_readers.py  test_run_catalog_import.py  test_run_index.py  test_run_soap.py  test_run_verification.py
tests/lsdb/catalog/: test_cone_search.py  test_crossmatch.py  test_index_search.py
tests/lsdb/io/: test_to_hats.py
tests/lsdb/loaders/: test_read_hats.py
(+21 files in other folders)
