
[project]
name = "hats_cloudtests"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "LINCC Frameworks", email = "lincc-frameworks-team@lists.lsst.org" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    # lsdb, hats, and hats-import are built from source via requirements.txt
    "adlfs",
    "s3fs>0.5",
    "gcsfs",
    "moto[server]",
    "shortuuid",
]

[project.urls]
"Source Code" = "https://github.com/astronomy-commons/hats_cloudtests"

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "asv[virtualenv]==0.6.5", # Used to compute performance benchmarks
    "black", # Used for static linting of files
    "jupyter", # Clears output from Jupyter notebooks
    "pre-commit", # Used to run checks before finalizing a git commit
    "pylint", # Used for static linting of files
    "pytest",
    "pytest-cov", # Used to report total code coverage
    "pytest-mock", # Used to mock objects in tests
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "dask: mark tests as having a dask client runtime dependency",
    "write_to_cloud: test writes to cloud - skipped for read-only file system testing",
    "requires_range: test requires a range request - skipped FOR NOW for http",
]
testpaths = [
    "tests",
    "src",
    "docs",
]
addopts = "--doctest-modules --doctest-glob=*.rst"

[tool.black]
line-length = 110
target-version = ["py311"]
[tool.isort]
profile = "black"
line_length = 110


[tool.coverage.run]
omit=["src/hats_cloudtests/_version.py"]
